# ibdm

./: .gitignore  AGENTS.md  BEADS_IBIS2_IBIS4_TASKS.md  CLAUDE.md  DEMO_PLAN.md  DEVELOPMENT_PLAN.md  GETTING_STARTED.md  IBDM_API_KEY_VERIFICATION.md  IBIS_PROGRESSION_GUIDE.md  IBIS_VARIANTS_PRIORITY.md  LARSSON_PRIORITY_ROADMAP.md  LARSSON_TASK_MAPPING.md  NEXT-TASK.md  NLU_ENHANCEMENT_PLAN.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  SYSTEM_ACHIEVEMENTS.md  ibdm-64.14-review.md  investigation_qud_201.md  pyproject.toml  requirements-dev.txt  requirements.txt  test_grounding.py  test_qud_operations.py
.beads/: .gitignore  add_nlg_doc_task.py  beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  config.yaml  create_demo_tasks.py  create_ibis_tasks.py  issues.jsonl  update_nlg_demo_tasks.py  update_priorities.py
.claude/: BURR_NLU_NLG_TASKS_SUMMARY.md  COMPLIANCE_SKILL_ANALYSIS.md  LARSSON_TRACKING.md  METRICS_VERIFICATION_SUMMARY.md  SKILL_CLEANUP_SUMMARY.md  SessionStart  audit-tasks.sh  beads-alias.sh  beads-helpers.sh  beads-larsson.sh  burr-nlu-nlg-tasks.json  compliance-task-executor.py  create-burr-nlu-nlg-tasks.py  create-refactoring-tasks.py  larsson-metrics-helper.py  sync-docs.sh  validate-bsr-tasks.py
demos/: 01_core_concepts.py  02_cost_analysis.py  03_nlu_integration_basic.py  03_nlu_integration_interactive.py  README.md  README_INTERACTIVE_DEMO.md  RULE_DRIVEN_PLAN.md  SCENARIO_PLAN_NDA.md  terminal_renderer_demo.py
docs/: ARCHITECTURE_NLU_IBDM_NLG_INTEGRATION.md  CAUSATION_CHAIN_ANALYSIS.md  DOMAIN_LAYER_RECOMMENDATION.md  INDEX.md  INTERACTIVE_SCENARIO_EXPLORER.md  LARSSON_ALGORITHMS.md  Larsson_Tesis_nopages.md  PLAN_EVALUATION_AFTER_PYTRINDIKIT.md  PYTRINDIKIT_VERDICT.md  PY_TRINDIKIT_ANALYSIS.md  REFACTORING_PLAN_accommodation.md  REVISED_REFACTORING_TASKS.md  SCENARIO_ALIGNMENT.md  SCENARIO_EXECUTION_GUIDE.md  SCENARIO_VALIDATION_POLICIES.md  SYSTEM_DESIGN_AND_LARSSON_ALIGNMENT.md  THESIS_DOCUMENTATION_SUMMARY.md  UNIFIED_SCENARIO_SYSTEM.md  ZFC.md  architecture_interpretation_accommodation.md  architecture_principles.md  burr_refactoring_task_winnowing.md  burr_state_refactoring.md  environment_setup.md  execution_controller_design.md  fix_ocr_advanced.py  ibis1_demo_scenarios.md  ibis3_demo_scenarios.md  ibis3_implementation.md  ibis4_demo_scenarios.md  ibis_scenarios_presentation.md  llm_configuration.md  nlg_business_demo_integration.md  nlu_interface_specification.md  scenario_explorer_guide.md  split_thesis.py  visualization.md  visualization_data_model.md
examples/: README.md  ibis4_demo.py  simple_llm_demo.py
reports/: beads-priority-changes-2025-11-15.md  beads-zfc-alignment-2025-11-15.md  demo-focused-reorganization-2025-11-15.md  fidelity_2025-11-14.json  fidelity_2025-11-14.txt  ibd-1-completion-analysis.md  ibdm-110.1_baseline_2025-11-18_122312_4f591fc.txt  ibdm-110.1_final_2025-11-18_122752_4f591fc.txt  ibdm-110.1_review_2025-11-18_122756_4f591fc.txt  ibdm-111_baseline_2025-11-17_222422_7cacdcc.txt  ibdm-111_final_2025-11-17_222917_628e1aa.txt  ibdm-111_review_2025-11-17_222922_628e1aa.txt  ibdm-112_baseline_2025-11-17_222931_628e1aa.txt  ibdm-112_baseline_2025-11-18_083434_f9b8027.txt  ibdm-112_final_2025-11-18_083201_f9b8027.txt  ibdm-112_final_2025-11-18_083851_bd6cfe1.txt  ibdm-112_review_2025-11-18_083213_f9b8027.txt  ibdm-112_review_2025-11-18_083855_bd6cfe1.txt  ibdm-113_baseline_2025-11-18_084942_64cd9bc.txt  ibdm-113_final_2025-11-18_085739_056c8a8.txt  ibdm-113_review_2025-11-18_085743_056c8a8.txt  ibdm-114_baseline_2025-11-18_084135_a9495d5.txt  ibdm-114_final_2025-11-18_084501_de1a040.txt  ibdm-114_review_2025-11-18_084505_de1a040.txt  ibdm-115_baseline_2025-11-18_190730_b07d8a2.txt  ibdm-115_final_2025-11-18_190900_b07d8a2.txt  ibdm-115_review_2025-11-18_190905_b07d8a2.txt  ibdm-116_baseline_2025-11-18_190909_b07d8a2.txt  ibdm-116_final_2025-11-18_191102_b07d8a2.txt  ibdm-116_review_2025-11-18_191106_b07d8a2.txt  ibdm-117_baseline_2025-11-18_083913_bd6cfe1.txt  (+82 more)
(+303 files in other folders)
