[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ibdm"
version = "0.1.0"
description = "Issue-Based Dialogue Management system implementing Staffan Larsson's framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "IBDM Developer"}
]

dependencies = [
    "burr[cli]>=0.20.0",
    "pydantic>=2.0",
    "typing-extensions>=4.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "hypothesis>=6.82",
    "mypy>=1.5",
    "black>=23.7",
    "ruff>=0.0.285",
    "ipython>=8.14",
    "jupyter>=1.0",
]

nlu = [
    "transformers>=4.30",
    "torch>=2.0",
    "spacy>=3.6",
]

storage = [
    "sqlalchemy>=2.0",
    "redis>=4.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --cov=ibdm --cov-report=term-missing"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []
